--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -17,7 +17,7 @@
 #
 # Author: David Cantrell <dcantrell@redhat.com>
 
-utilsdir            = $(libdir)/$(PACKAGE_NAME)-runtime
+utilsdir            = $(libexecdir)/$(PACKAGE_NAME)
 
 utils_PROGRAMS      = modlist mapshdr readmap
 dist_utils_SCRIPTS  = genmodinfo trimpciids
