Startup notification in live installer (#530908).
Also depends on the fix for 580481 ('usermode' package). This patch mostly
deals with the need to have i18n support for the notification name.

--- a/liveinst/console.apps/Makefile.am
+++ b/liveinst/console.apps/Makefile.am
@@ -22,4 +22,5 @@ consoledir        = /etc/security/console.apps
 dist_console_DATA = liveinst
 endif
 
+CLEANFILES = *.h
 MAINTAINERCLEANFILES = Makefile.in
