--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -128,6 +128,7 @@ textw/zipl_text.py
 
 # liveinst source files
 liveinst/liveinst.desktop.in.h
+liveinst/console.apps/liveinst.h
 
 # Glade definition files
 ui/GroupSelector.glade.h
