Fix "make check" to run the tests against your git checkout of anaconda.

--- a/tests/kickstart/Makefile.am
+++ b/tests/kickstart/Makefile.am
@@ -20,3 +20,7 @@
 EXTRA_DIST = *.py
 
 MAINTAINERCLEANFILES = Makefile.in
+
+TESTS_ENVIRONMENT = PYTHONPATH=$(top_builddir)/isys/.libs:$(top_builddir)/isys:$(top_builddir)
+
+TESTS = commands.py
