--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -220,6 +220,36 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Thu Apr 15 2010 David Cantrell <dcantrell@redhat.com> - 13.21.28-1
+- PkgWrangler fixes (dcantrell)
+  Related: rhbz#543948
+- Do not append "rhgb quiet" to s390 boot loader config (dcantrell)
+  Related: rhbz#526364
+  Resolves: rhbz#570743
+- Try to get boot reqs onto the selected boot device. (dlehman)
+  Resolves: rhbz#560387
+- Ensure proper disklabel type on boot disk if CLEARPART_TYPE_ALL. (dlehman)
+  Resolves: rhbz#570483
+- Add proper support for destruction of disklabels. (dlehman)
+  Related: rhbz#570483
+- Three small fixes to action sorting. (dlehman)
+  Related: rhbz#570483
+- add_drive_text: Pass interface to iscsi.addTarget (hdegoede)
+  Related: rhbz#571808
+- Add a questionInitializeDisk method to the rescue interface (hdegoede)
+  Resolves: rhbz#582304
+- Fix syntax error in kickstart.py (hdegoede)
+  Related: rhbz#576976
+- Add advanced storage support to rescue mode (hdegoede)
+  Resolves: rhbz#571808
+- rescue.py: Put our mount / rw, ro, skip question in a loop (hdegoede)
+  Related: rhbz#571808
+- Move addDriveDialog() and friends to their own class (hdegoede)
+  Related: rhbz#571808
+- partition_text: Make addDriveDialog() not depend on anaconda.storage
+  (hdegoede)
+  Related: rhbz#571808
+
 * Wed Apr 14 2010 David Cantrell <dcantrell@redhat.com> - 13.21.27-1
 - Simplify HWADDR removal check on s390x (dcantrell)
   Resolves: rhbz#546005
