put liveinst/console.apps/liveinst.h in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ lang-names
 lang-table.h
 libtool
 liveinst/*.desktop.in.h
+liveinst/console.apps/liveinst.h
 loader/dirbrowser
 loader/keymaps-override-*
 ltmain.sh
